--- a/src/AbpBookStore.Domain.Shared/Localization/AbpBookStore/en.json
+++ b/src/AbpBookStore.Domain.Shared/Localization/AbpBookStore/en.json
@@ -27,12 +27,12 @@
         "Enum:BookType:6": "Science",
         "Enum:BookType:7": "Science fiction",
         "Enum:BookType:8": "Poetry",
-        "Permission:AbpBookStore": "Book Store",
+        "Menu:Books": "Books",
+        "Permission:AbpBookStore": "AbpBookStore",
         "Permission:Book": "Book Management",
         "Permission:Book:Create": "Creating books",
         "Permission:Book:Update": "Editing books",
         "Permission:Book:Delete": "Deleting books",
-        "Menu:Books": "Books",
         "Menu:Authors": "Authors",
         "NewAuthor": "New author",
         "AuthorDeletionConfirmationMessage": "Are you sure to delete the author '{0}'?",
